--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/router": "^14.1.0",
     "bootstrap": "^5.2.0",
     "rxjs": "~7.5.0",
+    "sort-by": "^1.2.0",
+    "sortby": "^0.0.2",
     "sweetalert2": "^11.4.26",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
